small spacing fix on soft skills section

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -740,7 +740,7 @@ section#contact .text-danger {
 }
 
 #ss-row-2 {
-    margin-top: 20px;
+    margin-top: 80px;
 }
 
 footer {
